--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Modificar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.RRHH.ro_rol_Info
 @{
-    ViewBag.Title = "Reprocesar rol";
+    ViewBag.Title = "Procesar rol";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -9,69 +9,93 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Modificar", "ProcesarRol", FormMethod.Post, new { @class = "form", @role = "form" }))
-{
+{@Html.HiddenFor(q => q.IdEmpresa);
+@Html.HiddenFor(q => q.IdRol);
 
-    @Html.HiddenFor(q => q.IdEmpresa);
-    @Html.HiddenFor(q => q.IdRol);
-
-    <div class="row">
+<div class="row">
+    <div class="col-md-12">
         <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="FechaInicio">Nómina*</label>
-                    @Html.DropDownListFor(q => q.IdNomina_Tipo, new SelectList(ViewBag.lst_nomina, "IdNomina_Tipo", "Descripcion"), "== Seleccione ==", new { @class = "form-control", @id = "IdNomina_Tipo" })
-                    @Html.ValidationMessageFor(q => q.IdNomina_Tipo, "", new { @class = "text-danger" })
-                </div>
+            <div class="form-group">
+                <label for="FechaInicio">Nómina*</label>
+                @Html.DropDownListFor(q => q.IdNomina_Tipo, new SelectList(ViewBag.lst_nomina, "IdNomina_Tipo", "Descripcion"), "== Seleccione ==", new { @class = "form-control", @id = "IdNomina_Tipo" })
+                @Html.ValidationMessageFor(q => q.IdNomina_Tipo, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
-    <div class="row">
+</div>
+<div class="row">
+    <div class="col-md-12">
         <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="FechaInicio">Proceso de la nómina*</label>
-                    @Html.DropDownListFor(q => q.IdNomina_TipoLiqui, new SelectList(ViewBag.lst_nomina_tipo, "IdNomina_TipoLiqui", "DescripcionProcesoNomina"), "== Seleccione ==", new { @class = "form-control", @id = "IdNomina_TipoLiqui" })
-                    @Html.ValidationMessageFor(q => q.IdNomina_TipoLiqui, "", new { @class = "text-danger" })
-                </div>
+            <div class="form-group">
+                <label for="FechaInicio">Proceso de la nómina*</label>
+                @Html.DropDownListFor(q => q.IdNomina_TipoLiqui, new SelectList(ViewBag.lst_nomina_tipo, "IdNomina_TipoLiqui", "DescripcionProcesoNomina"), "== Seleccione ==", new { @class = "form-control", @id = "IdNomina_TipoLiqui" })
+                @Html.ValidationMessageFor(q => q.IdNomina_TipoLiqui, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
-    <div class="row">
+</div>
+<div class="row">
+    <div class="col-md-12">
         <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="FechaInicio">Periodo*</label>
-                    @Html.DropDownListFor(q => q.IdPeriodo, new SelectList(ViewBag.lst_periodos, "IdPeriodo", "Descripcion"), "== Seleccione ==", new { @class = "form-control", @id = "IdPeriodo" })
-                    @Html.ValidationMessageFor(q => q.IdPeriodo, "", new { @class = "text-danger" })
-                </div>
+            <div class="form-group">
+                <label for="FechaInicio">Periodo*</label>
+                @Html.DropDownListFor(q => q.IdPeriodo, new SelectList(ViewBag.lst_periodos, "IdPeriodo", "Descripcion"), "== Seleccione ==", new { @class = "form-control", @id = "IdPeriodo" })
+                @Html.ValidationMessageFor(q => q.IdPeriodo, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
-
-
-    <div class="row">
+</div>
+<div class="row">
+    <div class="col-md-12">
         <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="ca_descripcion">Descripción*</label>
-                    @Html.TextBoxFor(q => q.Observacion, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Observacion, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <label for="ca_descripcion">Descripción*</label>
+                @Html.TextBoxFor(q => q.Observacion, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Observacion, "", new { @class = "text-danger" })
 
 
-                </div>
             </div>
         </div>
     </div>
+</div>
 
-    <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Procesar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","ProcesarRol",new { Area = "RRHH" },null)">Cancelar</a>
+
+<div id="Tabs" role="tabpanel">
+    <ul class="nav nav-tabs" role="tablist">
+        <li class="active">
+            <a href="#tab_estadisticas" aria-controls="datos" role="tab" data-toggle="tab">Estadistica</a>
+        </li>
+        <li>
+            <a href="#tab_contratos_por_vencer" aria-controls="diario" role="tab" data-toggle="tab">Contratos por vencer</a>
+        </li>
+    </ul>
+    <div class="tab-content" style="padding-top: 20px">
+        <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_estadisticas">
+
+        </div>
+        <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_contratos_por_vencer">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            @Html.Action("GridViewPartial_contratos_por_vencer", new { Area = "RRHH", Controller = "Contrato", ViewBag.FechaCorte })
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
     </div>
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
+</div>
+
+<div class="box-footer">
+    <button type="submit" class="btn btn-primary">Procesar</button>
+    <a class="btn btn-default" href="@Url.Action("Index","ProcesarRol",new { Area = "RRHH" },null)">Cancelar</a>
+</div>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
 }
 
 
