--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Modificar.cshtml
@@ -196,11 +196,13 @@
                     @Html.ValidationMessageFor(q => q.vt_NumFactura, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-12">
+            <div class="col-md-1">
                 <div class="form-group">
-                    <label for="pf_observacion">Observación</label>
-                    @Html.TextBoxFor(q => q.vt_Observacion, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.vt_Observacion, "", new { @class = "text-danger" })
+                    <label for="btn_desbloquear">         </label>
+                    <button type="button" class="btn btn-primary form-control" id="btn_desbloquear" onclick="MostrarModalDesbloqueo();" title="Desbloquear precios">
+                        <i class="fa fa-lock"></i>
+                    </button>
+                    <label id="EstadoDesbloqueo" class="text-danger" style="margin-left:5px;" hidden></label>
                 </div>
             </div>
         </div>
@@ -219,9 +221,9 @@
                     <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_general">
                         <div class="col-md-8">
                             <div class="form-group">
-                                <label for="IdFormaPago">Forma de pago*</label>
-                                @Html.DropDownListFor(q => q.IdFormaPago, new SelectList(ViewBag.lst_forma_pago, "IdFormaPago", "nom_FormaPago"), new { @class = "form-control", @id = "IdFormaPago" })
-                                @Html.ValidationMessageFor(q => q.IdFormaPago, "", new { @class = "text-danger" })
+                                <label for="IdTerminoPago">Termino pago*</label>
+                                @Html.DropDownListFor(q => q.vt_tipo_venta, new SelectList(ViewBag.lst_pago, "IdTerminoPago", "nom_TerminoPago"), new { @class = "form-control", @id = "vt_tipo_venta" })
+                                @Html.ValidationMessageFor(q => q.vt_tipo_venta, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -229,13 +231,6 @@
                                 <label for="IdVendedor">Vendedor*</label>
                                 @Html.DropDownListFor(q => q.IdVendedor, new SelectList(ViewBag.lst_vendedor, "IdVendedor", "Ve_Vendedor"), new { @class = "form-control", @id = "IdVendedor" })
                                 @Html.ValidationMessageFor(q => q.IdVendedor, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <label for="IdTerminoPago">Termino pago*</label>
-                                @Html.DropDownListFor(q => q.vt_tipo_venta, new SelectList(ViewBag.lst_pago, "IdTerminoPago", "nom_TerminoPago"), new { @class = "form-control", @id = "vt_tipo_venta" })
-                                @Html.ValidationMessageFor(q => q.vt_tipo_venta, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -287,11 +282,13 @@
                             </div>
                         </div>
                         <div class="col-md-12">
-                            <button type="button" class="btn btn-primary" id="btn_desbloquear" onclick="MostrarModalDesbloqueo();">
-                                <i class="fa fa-lock"></i> Desbloquear
-                            </button>
-                            <label id="EstadoDesbloqueo" class="text-danger" style="margin-left:10px;" hidden></label>
+                            <div class="form-group">
+                                <label for="pf_observacion">Observación</label>
+                                @Html.TextBoxFor(q => q.vt_Observacion, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.vt_Observacion, "", new { @class = "text-danger" })
+                            </div>
                         </div>
+                        
                     </div>
                     <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_cuotas">
                         <div class="row">
@@ -627,7 +624,6 @@
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
                 $("#IdVendedor").val(data.IdVendedor);
-                $("#IdFormaPago").val(data.FormaPago);
                 $("#vt_tipo_venta").val(data.IdTipoCredito);
                 get_info_termino_pago();
             },
